
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 FEB 27a
  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
    - added averaged_rates_local() to reactions up to 23
  * in model/chem/_NH3_Plasma_10s
    - deleted arakoni2007_new.c
    - deleted arakoni2007_old.c
  * in model/thermo/doc/electronimpact.tex and model/thermo/doc/report.tex
    - fixed a few bugs that were preventing proper compilation of the document
  * in src/data.c
    - in write_data_file_binary_ascii(), fixed a bug: flux_t *fluxtmp; should be tmpflux_t *fluxtmp;
    

2024 FEB 26a
  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
    - added averaged rates to reactions 7, 8, 10
  * in model/thermo/_generic/electronimpact.c
    - for species O2 and N2, altered the splines so that they use fewer control points (and retain
      the same accuracy)
    - added species N, O, NO
  * in model/thermo/doc/electronimpact.tex
    - added species O, N, NO


2024 FEB 23b
  * in src/test.c
    - changed the call to _mueNk_from_Te() to include *gl as the first parameter  
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - changed the call to _mueNk_from_Te() to include *gl as the first parameter
  * in model/transport/_Dixon-Lewis/transport.c
    - changed the call to _mueNk_from_Te() to include *gl as the first parameter
  * in model/transport/_Gupta-Yos/transport.c
    - changed the call to _mueNk_from_Te() to include *gl as the first parameter
    - in _mueNk_from_Te(), now calls _mueNk_from_Te_ParentMacheret()
      when TRANSPORTMODEL==TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_MOBILITIESPARENTMACHERET


2024 FEB 23a
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in update_bdry_fluid(), now only calls BDRY_WALLTFIXEDCATALYTIC1 if BDRYDIRECFOUND or this